2002-02-05  H.J. Lu  <hjl@gnu.org>

	* sysdeps/mips/pspinlock.c (__pthread_spin_lock): Not use
	branch likely.
	* sysdeps/mips/pt-machine.h (testandset): Likewise.
	(__compare_and_swap): Likewise.

2002-02-07  Ulrich Drepper  <drepper@redhat.com>

	* internals.h: Move declarations/definitions of
	__pthread_initial_thread_bos, __pthread_initial_thread,
	__pthread_manager_thread_bos, __pthread_manager_thread_tos,
	__pthread_manager_thread, __pthread_nonstandard_stacks, STACK_SIZE,
	CURRENT_STACK_FRAME, __pthread_find_self, and thread_self...
	* descr.h: ...here.
	* sysdeps/i386/tls.h: Add TLS definitions also for !FLOATING_STACKS.
	Define THREAD_GETMEM accordingly.

2002-02-06  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/i386/tls.h: Include <stddef.h> for size_t.

	* sysdeps/i386/tls.h: Define THREAD_DTV.

2002-02-04  Ulrich Drepper  <drepper@redhat.com>

	* internals.h: Move thread descriptor definition...
	* descr.h.: ...here.  New file.
	* sysdeps/i386/tls.h: New file.

2002-02-01  H.J. Lu  <hjl@gnu.org>

	* sysdeps/mips/pspinlock.c (__pthread_spin_lock): Use a
	different register in the delayed slot.  Use branch likely.

	* sysdeps/mips/pt-machine.h (testandset): Call _test_and_set.
	(__compare_and_swap): Return 0 only when failed to compare. Use
	branch likely.

2002-02-01  Jakub Jelinek  <jakub@redhat.com>

	* Versions (__libc_internal_tsd_get, __libc_internal_tsd_set,
	__pthread_kill_other_threads_np): Move to GLIBC_PRIVATE.
	* sysdeps/i386/i586/Versions: Move all symbols to GLIBC_PRIVATE.
	* sysdeps/i386/i686/Versions: Move all symbols to GLIBC_PRIVATE.
	* sysdeps/sparc/sparc32/sparcv9/Versions: New file.
	* sysdeps/sparc/sparc64/Versions: New file.
	* sysdeps/ia64/Versions: Move all symbols to GLIBC_PRIVATE.

2002-01-31  Ulrich Drepper  <drepper@redhat.com>

	* pthread.c: _dl_cpuclock_offset is not any longer a global variable
	in SHARED code, use GL(dl_cpuclock_offset).

2002-01-28  Andreas Jaeger  <aj@suse.de>
